# tiralabra-labyrintti

./: .coveragerc  .gitignore  .pylintrc  README.md  labyrintti3.txt  pyproject.toml  tasks.py
.github/workflows/: main.yml
100x100labyrintit/: labyrintti10.txt  labyrintti6.txt  labyrintti7.txt  labyrintti8.txt  labyrintti9.txt
150x150labyrintit/: labyrintti11.txt  labyrintti12.txt  labyrintti13.txt  labyrintti14.txt  labyrintti15.txt
20x20labyrinths/: labyrinth0.txt  labyrinth1.txt  labyrinth2.txt  labyrinth3.txt  labyrinth4.txt  labyrinth5.txt
20x20labyrintit/: labyrintti1.txt  labyrintti2.txt  labyrintti3.txt  labyrintti5.txt
dokumentit/: käyttöohje.md  määrittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md  viikkoraportti1.md  viikkoraportti2.md  viikkoraportti3.md  viikkoraportti4.md  viikkoraportti5.md  viikkoraportti6.md
src/: dead_end_filling.py  handle_event_algorithm_view.py  ikkuna.py  index.py  labyrinth.py  labyrintin_generointi.py  labyrintin_hakeminen.py  labyrintin_luonti.py  main.py  menu.py  sovellus.py  tremaux.py  ui.py
src/front_end/: dead_end_filling_alg.py  nayta_labyrintti.py  sovelluksen_toiminnot.py  tremaux_alg.py  vertaile.py
src/tests/: dead_end_filling_test.py  labyrintin_haku_test.py  tremaux_test.py
