[tool.poetry]
name = "tiralabra-labyrintti"
version = "0.1.0"
description = ""
authors = ["Sanni Tuomisto <sanni.tuomisto@helsinki.fi>"]
readme = "README.md"
packages = [{include = "tiralabra_labyrintti"}]

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.6"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
