[tool.poetry]
name = "tiralabra-labyrintti"
version = "0.1.0"
description = ""
authors = ["Sanni Tuomisto <sanni.tuomisto@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.6"
invoke = "^2.0.0"
pygame = "^2.3.0"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.1"
pytest = "^7.2.2"
coverage = "^7.2.2"
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
